[package]
name = "psd"
version = "0.3.2"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
description = "A Rust API for parsing and working with PSD files."
keywords = ["psd", "photoshop", "texture", "png", "image"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/psd"
edition = "2018"

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"

[workspace]
members = [
    "examples/drag-drop-browser"
]

[profile.release]
# We can re-enable lto for the demo when wasm-pack 0.2.38 is released. There's a bug in 0.2.37
# lto = true

[[bin]]
name = "read-psd"
path = "examples/read-psd/main.rs"
