[package]
name = "drag-drop-browser"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
css-rs-macro = "0.1.0"
js-sys = "0.3.14"
psd = {path = "../../"}
virtual-dom-rs = "0.6.1"
wasm-bindgen = "0.2.37"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "CanvasRenderingContext2d",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "ImageData",
    "MouseEvent",
    "Window",
    "console"
]
