[package]
name = "drag-drop-browser"
version = "0.1.1"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
percy-css-macro = "0.1.1"
js-sys = "0.3.70"
psd = {path = "../../"}
percy-dom = "0.9.9"
wasm-bindgen = "0.2.93"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "ImageData",
    "MouseEvent",
    "Window",
    "console"
]
